--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -11,5 +11,8 @@
     <Setting Name="TempFolderName" Type="System.String" Scope="Application">
       <Value Profile="(Default)">Temp</Value>
     </Setting>
+    <Setting Name="FullTextSearchPlusMinusSymbols" Type="System.Int32" Scope="Application">
+      <Value Profile="(Default)">50</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
