--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -6,7 +6,7 @@
       <Value Profile="(Default)">10</Value>
     </Setting>
     <Setting Name="ConnectionString" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">Server=localhost;Database=Ark;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=True;</Value>
+      <Value Profile="(Default)">Server=192.168.100.149;Database=Ark;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=True;</Value>
     </Setting>
     <Setting Name="TempFolderName" Type="System.String" Scope="Application">
       <Value Profile="(Default)">Temp</Value>
